--- a/report/index.html
+++ b/report/index.html
@@ -6,7 +6,24 @@
     <link rel="stylesheet" href="static/main.css">
   </head>
   <body>
-    <div id="title">Bacterial Survival with Evolving Algorithms</div>
-    <div id="members">Yuxi Zhang, Kainan Wang, Tao Yuan</div>
+    <div id="main">
+        <div id="title">Bacterial Survival with Evolving Algorithms</div>
+        <div id="members">Yuxi Zhang, Kainan Wang, Tao Yuan</div>
+        <div id="university">University of California, Los Angeles</div>
+
+        <div id="demo-section">
+          <img src="static/demo.png">
+        </div>
+
+        <div id="links-section">
+          <span><a href="static/report.pdf">[Report]</a></span>
+          <span><a href="static/src/">[Code]</a></span>
+        </div>
+
+        <div id="intro-section">
+          <div class='h'>Introduction</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
   </body>
 </html>
