--- a/report/index.html
+++ b/report/index.html
@@ -22,7 +22,7 @@
 
         <div id="intro-section">
           <div class='h'>Introduction</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>The goal of this project is to train an AI that can learn survival strategies from the environment. We carefully design an environment for bacteria that does not have trivial strategy to survive. Our training process starts from simple strategies and we apply the trained model as input for the next round to keep it evolving. We adjust the environment with different parameters and observe how it changes the behaviours of bacteria.</p>
         </div>
     </div>
   </body>
