--- a/demo/index.html
+++ b/demo/index.html
@@ -31,9 +31,9 @@
           // b.stroke = 'rgba('+cr+', '+cg+', '+cb+', 0.6)';
           b.stroke = 'rgba(255, 0, 0,'+s.e+')';
           b.linewidth = 2;
-          if (i < 0)
-            b.fill = 'rgba(0, 0, 0, 1)';
-          else
+          // if (i < 0)
+          //   b.fill = 'rgba(0, 0, 0, 1)';
+          // else
             b.fill = 'rgba('+cr+', '+cg+', '+cb+', 0.3)';
           b.scale = s.r * scale / rInit;
           return b;
