--- a/report/index.html
+++ b/report/index.html
@@ -18,8 +18,8 @@
         </div>
 
         <div id="links-section">
-          <span><a href="static/report.pdf">[Report]</a></span>
-          <span><a href="static/src/">[Code]</a></span>
+          <span><a href="report.pdf">[Report]</a></span>
+          <span><a href="src/">[Code]</a></span>
         </div>
 
         <div id="intro-section">
